@@ -102,7 +102,7 @@ function Broker::__peers%(%): PeerInfos
 		const auto& pi = zeek::id::find_type<RecordType>("Broker::PeerInfo");
 		const auto& ei = zeek::id::find_type<RecordType>("Broker::EndpointInfo");
 		const auto& ni = zeek::id::find_type<RecordType>("Broker::NetworkInfo");
-		auto peer_info = new RecordVal(pi);
+		auto peer_info = make_intrusive<RecordVal>(pi);
 		auto endpoint_info = make_intrusive<RecordVal>(ei);
 		auto network_info = make_intrusive<RecordVal>(ni);
 		auto n = p.peer.network;
@@ -125,7 +125,7 @@ function Broker::__peers%(%): PeerInfos
 		peer_info->Assign(0, std::move(endpoint_info));
 		peer_info->Assign(1, zeek::BifType::Enum::Broker::PeerStatus->GetVal(ps));
 
-		rval->Assign(i, peer_info);
+		rval->Assign(i, std::move(peer_info));
 		++i;
 		}
 
