@@ -211,6 +211,9 @@ Deprecated Functionality
 - ``TableVal::Lookup()`` is deprecated, use ``TableVal::Find()`` or
   ``TableVal::FindOrDefault()``.
 
+- ``VectorVal::Assign`` methods taking raw ``Val*`` are deprecated, use the
+  methods that take ``IntrusivePtr``.
+
 Zeek 3.1.0
 ==========
 
